--- a/cv.css
+++ b/cv.css
@@ -3,17 +3,240 @@ Stamatia Markella Printzou (214675)
 May 30, 2022 
 */
 
-body {
-    background-color: white;
-  }
-  
-h1, h2, h3, h4, h5 {
-    color: black;
-    text-align: center;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    list-style: none;
+    font-family: 'Roboto', sans-serif;
 }
 
-p {
+body {
+    background-color: #cecece;
+}
+
+.cv-contents {
+    min-height: 100vh;
+    width: 80%;
+    margin: 2rem auto; 
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+}
+
+.left-section {
+    grid-column: span 2;
+    height: 100%;
+    background-color: #3c3c3c;
+}
+
+.right-section {
+    grid-column: span 5;
+    height: 100%;
+    background-color: #e4e4e4;
+}
+
+.left-section-contents {
+    padding: 2rem 2rem;
+}
+
+
+.profile {
+    width: 100%;
+    border-bottom: 2px solid whitesmoke;
+}
+
+.profile .profile-image {
+    width: 100%;
+}
+
+.name {
+    color: whitesmoke;
+    font-size: 30px;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    text-align: center;
+    font-weight: bold;
+    padding: 1rem 0;
+}
+
+.profession {
+    color: white;
+    font-size: 20px;
+    text-transform: uppercase;
+    text-align: center;
+    letter-spacing: 2px;
+    font-weight: bold;
+    padding-bottom: 1rem;
+}
+
+.left-title {
+    color: whitesmoke;
+    font-size: 20px;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+    padding-top: 3rem;
+}
+
+.contact-info ul {
+    padding-top: 1.5rem;
+}
+
+.contact-info ul li {
+    padding: .4rem 0;
+    display: flex;
+    align-items: center;
+    color: whitesmoke;
+    letter-spacing: 1px;
+    font-size: 18px;
+}
+
+a {
+    color: whitesmoke;
+}
+
+.contact-info ul li i {
+    padding-right: 1rem;
+    font-size: 18px;
+    color: whitesmoke;
+}
+
+.right-section-contents {
+    padding: 2rem 2rem;
+}
+
+.right-title {
     color: black;
-    font-family: georgia;
-    font-size: 120%;
-} 
+    font-size: 40px;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+    padding: 2rem 0;
+    position: relative;
+}
+
+.gap {
+    padding-bottom: 2rem;
+}
+
+.about-me-contents {
+    color: black;
+    font-size: 18px;
+    letter-spacing: 1px;
+    line-height: 2rem;
+    text-align: justify;
+}
+
+.education-contents,
+.skills-contents {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    padding-bottom: 2rem;
+    text-align: justify;
+}
+
+.education-school-name,
+.skills-name {
+    color: black;
+    font-size: 25px;
+    font-weight: bold;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    padding-bottom: .4rem;
+}
+
+.education-time-period {
+    font-size: 18px;
+    letter-spacing: 1px;
+    line-height: 2rem;
+}
+
+.education-subject,
+.skills-name {
+    font-size: 25px;
+    font-weight: bold;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    color: black;
+    padding-bottom: .4rem;
+}
+
+.education-desc,
+.skills-desc {
+    font-size: 16px;
+    letter-spacing: 1px;
+    line-height: 1.5rem;
+    border-left: 3px solid black;
+    padding-left: 5px;
+}
+
+/* Media Queries */
+@media screen and (max-width:780px) {
+    .education-contents,
+    .skills-contents {
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
+
+@media screen and (max-width:780px) {
+    .left-section {
+        grid-column: span 3;
+    }
+    .right-section {
+        grid-column: span 4;
+    }  
+}
+
+@media screen and (max-width:1200px) {
+    .cv-contents {
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
+
+@media screen and (max-width:390px) {
+    .cv-contents {
+        width: 100%;
+        margin: 0 auto;
+    }
+    .name {
+        font-size: 20px;
+    }
+    .profession {
+        font-size: 18px;
+    }
+    .left-title {
+        font-size: 18px;
+    }
+    .right-title {
+        font-size: 18px;
+    }
+    .contact-info ul li {
+        font-size: 12px;
+    }
+    .contact-info ul li i{
+        /* padding-right: 1rem; */
+        font-size: 12px;
+    }
+    .skills ul li p {
+        font-size: 12px;
+    }
+    .about-me-contents {
+        font-size: 16px;
+        line-height: 1.5rem;
+    }
+    .education-school-name,
+    .skills-name {
+        font-size: 18px;
+    }
+    .education-time-period {
+        font-size: 16px;
+    }
+    .education-subject,
+    .skills-name {
+        font-size: 18px;
+    }
+}
